# unitree_go2_code_01

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_driver/lib/go2_driver/: driver
install/go2_driver/share/go2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_driver_py/lib/go2_driver_py/: driver_py
install/go2_driver_py/share/go2_driver_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_teleop_ctrl_keyboard/share/go2_teleop_ctrl_keyboard/: package.sh
install/go2_tutorial/include/: sport_model.hpp
install/go2_tutorial/include/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
install/go2_tutorial/lib/go2_tutorial/: go2_cruising_client  go2_cruising_service  go2_ctrl  go2_state
install/go2_tutorial/share/go2_tutorial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_tutorial_inter/share/go2_tutorial_inter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_tutorial_py/lib/go2_tutorial_py/: go2_cruising_client  go2_cruising_service  go2_ctrl  go2_ctrl = go2_tutorial_py.go2_ctrl:maingo2_state  go2_state  go2_state = go2_tutorial_py.go2_state:maingo2_cruising_service = go2_tutorial_py.go2_cruising_service:maingo2_cruising_client
install/go2_tutorial_py/share/go2_tutorial_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_twist_bridge/lib/go2_twist_bridge/: twist_bridge
install/go2_twist_bridge/share/go2_twist_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/base/go2_description/: CMakeLists.txt  package.xml
src/base/go2_driver/: CMakeLists.txt  package.xml
src/base/go2_driver/src/: driver.cpp
src/base/go2_driver_py/: setup.cfg  setup.py
src/base/go2_teleop_ctrl_keyboard/: package.xml  setup.py
src/base/go2_twist_bridge/: CMakeLists.txt
src/base/go2_twist_bridge_py/: setup.py
src/helloworld/helloworld/: CMakeLists.txt  package.xml
src/helloworld/helloworld_py/: package.xml  setup.py
src/test/my_test_py/: package.xml  setup.cfg  setup.py
src/tutorial/go2_tutorial/: CMakeLists.txt
src/tutorial/go2_tutorial/launch/: go2_cruising.launch.py  go2_ctrl.launch.py  go2_state.launch.py
src/tutorial/go2_tutorial/params/: go2_cruising_service.yaml  go2_state.yaml
src/tutorial/go2_tutorial/src/: go2_cruising_client.cpp  go2_cruising_service.cpp  go2_ctrl.cpp  go2_state.cpp
src/tutorial/go2_tutorial_inter/: CMakeLists.txt
src/tutorial/go2_tutorial_py/: setup.cfg  setup.py
(+227 files in other folders)
